--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "next": "12.0.8",
@@ -15,6 +16,7 @@
     "sass": "^1.49.0"
   },
   "devDependencies": {
+    "cypress": "^9.3.1",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8"
   }
